# aeon-core

./: AI_ASSISTANT.md  ARCHITECTURE.md  DESIGN_INDEPENDENCE.md  INTEGRATION.md  QUICK_START.md  README.md  ULTRA.md  ULTRA_INTEGRATION.md  ULTRA_QUICK_START.md  main.py  pyproject.toml  visualize_architecture.py
.aeon/: facts.md  user.md
.github/workflows/: publish-pypi.yml
examples/: advanced_integration_demo.py  aeon_ultra_complete_demo.py  observability_economics_cli_demo.py  personal_assistant_ollama.py  personal_assistant_openrouter.py  reactor_controller.py  swarm_demo.py  test-ollama.py  test_intelligence_v2.py  verify_autonomous.py  verify_browser.py  verify_competitive.py  verify_hitl.py  verify_identity.py  verify_master_v040.py  verify_memory_trust.py  verify_phase3.py  verify_swarm.py
examples_ai_assistant/: .env.example  README.md  journal_assistant.py  macos_companion.py  mcp_google_maps.py  mcp_tools_integration.py  mcp_youtube_extractor.py  multi_platform_bot.py  requirements.txt  setup.sh  simple_chat_ollama.py  simple_chat_openai.py  simple_chat_openrouter.py  telegram_bot.py  with_safety_axioms.py
examples_industrial_critical/: aircraft_flight_control_axioms.py  offshore_oil_platform_axioms.py
scripts/: publish-pypi.sh
src/aeon/: __init__.py  protocols.py
src/aeon/automation/: __init__.py  scheduler.py  temporal.py
src/aeon/axioms/: reasoning_axiom.py
src/aeon/cache/: __init__.py  cache.py  distributed.py  lru.py
src/aeon/cli/: __init__.py  formatter.py  interface.py  main.py
src/aeon/core/: agent.py  config.py  packet.py
src/aeon/core/vault/: AGENTS.md  SOUL.md  USER.md  checkpoint.py
src/aeon/core/vault/checkpoints/: checkpoint_master_test_1771345746.json  checkpoint_swarm_99_1771345372.json
src/aeon/cortex/: context.py  reasoning.py
src/aeon/dialogue/: __init__.py  archive.py  context.py
src/aeon/dispatcher/: __init__.py  event.py  hub.py  recovery.py  webhook.py
src/aeon/economics/: __init__.py  pricing.py  tracker.py
src/aeon/executive/: citation.py  hitl.py  identity.py  safety.py
src/aeon/extensions/: __init__.py  capability.py  loader.py
src/aeon/gateway/: __init__.py  gateway.py  session.py  transport.py
src/aeon/health/: __init__.py  diagnostics.py  health_check.py  metrics.py
src/aeon/hive/: broker.py  protocol.py
src/aeon/integrations/: __init__.py  provider.py  registry.py
src/aeon/memory/: durable.py  events.py  models.py  store.py
src/aeon/observability/: __init__.py  hook.py  tracker.py
src/aeon/routing/: __init__.py  distributor.py  filters.py  router.py  strategies.py
src/aeon/runtime/: gateway.py  loop.py
src/aeon/security/: __init__.py  auth.py  encryption.py  permissions.py  trust.py
src/aeon/synapse/: adapter.py
src/aeon/tools/: base.py  browser.py  file.py  industrial_sensor.py  macos.py  registry.py  search.py  shell.py  workspace.py
