[project]
name = "aeon-core"
version = "0.1.0"
description = "Aeon Framework - The Neuro-Symbolic Runtime for Deterministic Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "a2a-sdk>=0.1.0",
    "mcp>=0.1.0",
    "rich>=13.0.0",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    # Nanobot integrations
    "typer>=0.9.0",  # CLI framework
    "prompt-toolkit>=3.0.0",  # Enhanced CLI input
    "httpx>=0.24.0",  # HTTP client for API calls
    "aiofiles>=23.0.0",  # Async file operations
    "python-multipart>=0.0.5",  # Multipart form handling
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aeon"]
