[project]
name = "aeon-core"
version = "0.4.0"
description = "Æon Framework - The Neuro-Symbolic Runtime for Safety-Critical Distributed Agents"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Richardson Lima", email = "contatorichardsonlima@gmail.com"}
]
maintainers = [
    {name = "Richardson Lima"}
]
keywords = [
    "agentic", "neuro-symbolic", "safety", "axioms", "deterministic",
    "ai-agents", "agent-framework", "distributed-agents", "safety-critical",
    "formal-verification", "multi-platform"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "rich>=13.0.0",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "typer>=0.9.0",
    "prompt-toolkit>=3.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.5",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "croniter>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://www.richardsonlima.com.br/aeon"
Documentation = "https://github.com/richardsonlima/aeon-core#readme"
Repository = "https://github.com/richardsonlima/aeon-core.git"
"Bug Tracker" = "https://github.com/richardsonlima/aeon-core/issues"
Changelog = "https://github.com/richardsonlima/aeon-core/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aeon"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
